--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -44,7 +44,9 @@
         android:id="@+id/gameRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
         android:layout_weight="1"
         android:padding="8dp"
-        android:layout_marginBottom="16dp"/>
+        android:layoutAnimation="@anim/layout_animation"
+        />
 </LinearLayout>
