wrapped mainActivity to a cardview, making it pop-op with a shadowy effect

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardElevation="10dp"
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="10dp">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -16,7 +24,7 @@
         <EditText
             android:id="@+id/urlEditText"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:hint="https://www.stocksnap.io"
             android:inputType="textUri" />
@@ -27,6 +35,7 @@
             android:layout_height="wrap_content"
             android:text="Fetch" />
     </LinearLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/imageRecyclerView"
@@ -58,3 +67,4 @@
         android:text="Start Game"
         android:visibility="gone" />
 </LinearLayout>
+</androidx.cardview.widget.CardView>
